--- a/index.html
+++ b/index.html
@@ -1442,7 +1442,7 @@
         <div class="row justify-content-center text-center mb-5">
           <div class="col-md-8  section-heading">
             <span class="subheading">Get In Touch</span>
-            <h2 class="heading mb-3">Contact Us</h2>
+            <h2 id= "contact-head" class = " heading mb-3">Contact Us</h2>
             <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind
               texts.
             </p>
