--- a/index.html
+++ b/index.html
@@ -1616,6 +1616,7 @@
         <div class="col-md-4">
           <h3 class="text-white">About Workout</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam facere optio eligendi.</p>
+         
         </div>
 
         <div class="col-md-3 ml-auto">
@@ -1633,9 +1634,10 @@
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus, odio beatae accusantium.
           </p>
 
-          <form action="#">
-            <div class="d-flex mb-5">
-              <input type="text" class="form-control rounded-0" placeholder="Email">
+           <form id="subscribe-form">
+            <div class="form-group d-flex">
+              <input id="subscribe-email" type= "email" class="form-control-rounded-0"
+                placeholder="Enter email address">
               <input type="submit" class="btn btn-primary rounded-0" value="Subscribe">
             </div>
           </form>
@@ -1789,13 +1791,15 @@
     }
     window.onload = function () {
       const contact = document.getElementById("contact-head");
-      contact.innerHTML = "HIIIIII";
+      contact.innerHTML = "Contact Us Krubb";
 
       loadDoc("./xml/class_sunday.xml", classXML);
       loadDoc("./json/class_sunday.json", classJSON);
       loadSubject('http://localhost:4000/api/subject');
+
+      document.getElementById('subscribe-form').addEventListener('submit', e => subscribeSubmit(e));
     };
-    //AJAX Function
+    //AJAX Function 1
     const ajax = async (config) => {
       const request = await fetch(config.url, {
         method: config.method || 'GET',
@@ -1821,13 +1825,33 @@
         message: document.getElementById("message").value
       }
       console.log(data);
-      let response =ajax({
+      let response = ajax({
         url: 'http://localhost:4000/api/contact',
         method: 'POST',
         data: data
       });
       console.log(response);
     }
+
+
+
+    async function subscribeSubmit(e) {
+      e.preventDefault();
+      console.log("HI");
+      const email = {
+        email: document.getElementById("subscribe-email").value
+      }
+
+      console.log(email);
+      const response = await fetch('http://localhost:4000/api/subscribe', {
+        method: 'POST',
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify(email)
+      });
+
+      console.log(response);  
+    }
+
 
   </script>
 </body>
